--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-env": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@types/react": "^18.0.28",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
         "@webpack-cli/serve": "^1.1.0",
@@ -61,6 +62,8 @@
         "codecov": "^3.8.1",
         "core-js": "^3.8.1",
         "lodash": "^4.17.21",
-        "regenerator-runtime": "^0.13.7"
+        "react": "^18.2.0",
+        "regenerator-runtime": "^0.13.7",
+        "typescript-react": "^0.0.2"
     }
 }
