--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "private": true,
     "scripts": {
         "test": "jest --coverage",
-        "lint": "prettier --check . && eslint . --ext .js,.ts && tsc --noEmit",
-        "lint:fix": "prettier --write . && eslint . --fix --ext .js,.ts",
+        "lint": "prettier --check ./src  && eslint ./src --ext .js,.ts && tsc --noEmit",
+        "lint:fix": "prettier --write ./src && eslint ./src --fix --ext .js,.ts",
         "start": "webpack serve --mode development",
         "build": "webpack --mode production"
     },
@@ -25,13 +25,14 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-env": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@types/react": "^18.0.28",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
         "@webpack-cli/serve": "^1.1.0",
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
-        "eslint": "^7.19.0",
+        "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-import": "^2.22.1",
@@ -62,10 +63,13 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
-        "@types/jest": "^26.0.16",
         "codecov": "^3.8.1",
         "core-js": "^3.8.1",
-        "regenerator-runtime": "^0.13.7"
+        "firebase": "^9.17.2",
+        "lodash": "^4.17.21",
+        "react": "^18.2.0",
+        "regenerator-runtime": "^0.13.7",
+        "typescript-react": "^0.0.2"
     },
     "jest": {
         "clearMocks": true,
