--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.1.3",
         "handlebars-webpack-plugin": "^2.2.1",
+        "css-loader": "^6.7.2",
+        "css-minimizer-webpack-plugin": "^4.2.2",
+        "mini-css-extract-plugin": "^2.7.0",
+        "html-loader": "^4.2.0",
         "html-webpack-plugin": "^4.5.0",
         "husky": "^4.3.4",
         "jest": "^26.6.3",
