--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@babel/core": "^7.12.9",
         "@babel/preset-env": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@types/jest": "^29.5.0",
         "@types/react": "^18.0.28",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
@@ -32,21 +33,21 @@
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^6.7.2",
+        "css-minimizer-webpack-plugin": "^4.2.2",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.1.3",
         "handlebars-webpack-plugin": "^2.2.1",
-        "css-loader": "^6.7.2",
-        "css-minimizer-webpack-plugin": "^4.2.2",
-        "mini-css-extract-plugin": "^2.7.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^4.5.0",
         "husky": "^4.3.4",
         "jest": "^26.6.3",
         "jest-localstorage-mock": "^2.4.5",
         "lint-staged": "^10.5.3",
+        "mini-css-extract-plugin": "^2.7.0",
         "prettier": "2.2.1",
         "typescript": "^4.1.3",
         "webpack": "^5.10.0",
